# stunning-spork

./: .gitignore  Autogen.puml  README.md  autogent.puml  blog.md  notebook.ipynb  pyproject.toml
notes/: Autogen Roadmap.excalidraw
notes/Source/: requirements.txt  test.py
notes/Source/1. Autogen Basics/: 0. Model for our Autogen Agents.ipynb  1. First_Autogen_Agent.ipynb  2. Autogen Architecture.ipynb  3. Autogen vs Other AI Framework.ipynb
notes/Source/2. Autogen Agent Chat/: 1. Async Functionality Practical.ipynb  1.2 Asynchronous Run.py  2. AgentChat_First_Agent.ipynb  3. Configuring LLMs.ipynb  3.1 ConfiguringLLM_Ollama_on_Collab .ipynb  3.2 Using OpenRouter With Autogen.ipynb  4. Agent Customization in Autogen.ipynb  5. Tools for Autogen Agents.ipynb  6. Multi-Model Capabilities with Autigen Agent.ipynb  7. Observing Agents.ipynb  8. Structured Output.ipynb
notes/Source/3. Autogen Teams/: 2. Observing Agents.ipynb  3. Team Operations.ipynb  4. Termination in Autogen.ipynb  5. Single Agent Team.ipynb  6. Managing State of Agents.ipynb  7. Managing State of Teams.ipynb  8. Loading Team state from a file.ipynb  team_state.json
notes/Source/4. Advance Interaction with Teams/: 1. Human in the Loop.ipynb  1. Human in the Loop.py  2. Human in the Loop : After Run.py  3. Human in the Loop After Run - Termination Conditions.py  3.1 User Feedback - Handoff Termination.py  4. Tools in Autogen.ipynb  Tools.excalidraw
notes/Source/5. Autogen Studio/: 1. AutogenStudio.ipynb  2. Team to JSON.py
project/: lawapp.ipynb
(+93 files in other folders)
