[project]
name = "stunning-spork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext[gemini,ollama,openai]>=0.7.5",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
]
