[project]
name = "stunning-spork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext[docker,gemini,ollama,openai]>=0.7.5",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "pypdf>=6.5.0",
    "pypdfium2>=5.3.0",
    "python-dotenv>=1.2.1",
]
